--- a/views/admin-lte/settings/appDetail.ejs
+++ b/views/admin-lte/settings/appDetail.ejs
@@ -46,7 +46,7 @@
                         <p></p>
                         <label class="control-label" for="callback">Callback URL</label>
 
-                        <p class="help-block">URL that will be redirected to once user has successfully logged in</p>
+                        <p class="help-block">URL that will be redirected to once user has successfully logged in. Please avoid adding forward slash at the end of the URL</p>
 
                         <div class="controls"
                              ng-class="{ 'has-error' : editAppForm.callback.$invalid && !editAppForm.$pristine }">
