--- a/views/admin-lte/oauth/oHeader.ejs
+++ b/views/admin-lte/oauth/oHeader.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="courseMapper" ng-controller="MainController">
+<html>
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -23,6 +23,12 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
+    <script src="/angular/angular.min.js" type="text/javascript"></script>
+    <script src="/angular/angular-route.min.js"></script>
+    <script src="/angular/angular-animate.min.js"></script>
+    <script src="/angular/angular-resource.min.js"></script>
+    <script src="/angular/angular-cookies.min.js"></script>
+
 </head>
 <!--
 skin-black
@@ -31,7 +37,7 @@ layout-top-nav | fixed | sidebar-collapse
 <body class="skin-blue sidebar-collapse">
 <header class="main-header">
     <!-- Logo -->
-    <a href="#" class="logo"><b>Course</b>Mapper</a>
+    <a href="javascript:;" class="logo"><b>Course</b>Mapper</a>
     <nav class="navbar navbar-static-top" role="navigation">
     </nav>
 
