can list installed app

--- a/views/admin-lte/settings/installed.ejs
+++ b/views/admin-lte/settings/installed.ejs
@@ -1,1 +1,15 @@
-eaa
+<h3>
+    Applications that are allowed to access your data
+</h3>
+
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box-body no-border">
+            <div class="installedApps">
+                <ul>
+                    <li ng-repeat="app in installedApps">{{app}}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
