--- a/views/admin-lte/settings/installed.ejs
+++ b/views/admin-lte/settings/installed.ejs
@@ -7,8 +7,17 @@
         <div class="box-body no-border">
             <div class="installedApps">
                 <ul>
-                    <li ng-repeat="app in installedApps">{{app}}</li>
+                    <li ng-repeat="app in installedApps">
+                        <p>{{app.app.name}}</p>
+                        <button type="button" class="btn btn-xs btn-warning"
+                                aria-label="Delete Installation"
+                                ng-click="deleteInstallation(app._id)">Delete Permission
+                        </button>
+                    </li>
                 </ul>
+            </div>
+            <div ng-show="installedApps.length == 0">
+                There is no application installed.
             </div>
         </div>
     </div>
