--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -49,7 +49,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <script src="http://46.101.153.234:8080/footprint.js"></script>
+    <script src="http://lanzarote.informatik.rwth-aachen.de:3030/footprint.js"></script>
 </head>
 <!--
 skin-black
