fixed position save error

--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -154,8 +154,8 @@
         };
 
         self.rePosition = function (w, h) {
-            var left = w / 2 + ((self.fromCenter.x - self.w / 2)  );
-            var top = h / 2 + ((self.fromCenter.y - self.h / 2)  );
+            var left = w / 2 + ((self.fromCenter.x));
+            var top = h / 2 + ((self.fromCenter.y));
 
             self.el.css({
                 left: left + "px",
