now it s not redirecting when not login or enrolled

--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -47,6 +47,7 @@
 
 <!-- modal contents -->
 <% include courseDetailModals %>
+<div ng-include="'/accounts/loginform'"></div>
 <!-- /.modal contents -->
 
 <script>
