--- a/views/admin-lte/login.ejs
+++ b/views/admin-lte/login.ejs
@@ -28,10 +28,11 @@
                             <div id="legend">
                                 <h2>Log In</h2>
                             </div>
-                            <% include formLogin%>
+                            <% include formLogin %>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- /.content -->
     </div>
