--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -20,9 +20,10 @@
                 {{course.name}}
             </a>
         </li>
-        <li><a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
+        <li ng-show="nodeId"><a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a>
+        </li>
         <% } %>
-        <li>
+        <li ng-show="treeNode">
             <a href="/course/{{course.slug}}/#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a>
         </li>
         <li class="active">{{tabDisplayName}}</li>
