--- a/views/admin-lte/catalogs/newCourseModal.ejs
+++ b/views/admin-lte/catalogs/newCourseModal.ejs
@@ -33,6 +33,20 @@
                                 </div>
                             </div>
 
+                            <br>
+                            <div class="control-group">
+                                <label class="control-label" for="Small Description">Small Description </label>
+
+                                <p class="help-block">A small introduction words about this course</p>
+
+                                <div class="controls"
+                                     ng-class="{ 'has-error' : newCourseForm.smallDescription.$invalid && !newCourseForm.$pristine }">
+                                    <input type="text" id="course" name="smallDescription" placeholder=""
+                                           class="form-control"
+                                           ng-model="course.smallDescription">
+                                </div>
+                            </div>
+
                             <div class="control-group">
                                 <p></p>
                                 <label class="control-label" for="description">Description </label>
