--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -13,7 +13,7 @@
         <div class="collapse-button" ng-show="data.type == 'subTopic'">
             <a class="pointer" ng-click="collapse('t' + data._id )">
                 <i class="fa fa-minus-square" ng-show="!collapseStatus[data._id]"></i>
-                <i class="fa fa-plus-square" ng-show="collapseStatus[data._id]"></i>
+                <i class="fa fa-plus-square" ng-show="collapseStatus[data._id] === true"></i>
             </a>
         </div>
 
