fix redirect on fb login on node detail page

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -62,6 +62,7 @@
 
 <!-- modal contents -->
 <% include nodeDetailModal %>
+<div ng-include="'/accounts/nodeloginform'"></div>
 <!-- /.modal contents -->
 
 <script>
