can see and delete rec cat in admin page

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -855,3 +855,7 @@ li.active .voting .vote-total {
 .aborted {
     cursor: default !important;
 }
+
+.html-sidebar-content{
+    padding: 10px !important;
+}
