--- a/views/admin-lte/cm-admin/index.ejs
+++ b/views/admin-lte/cm-admin/index.ejs
@@ -29,6 +29,8 @@
         <li><a href="#/categories">Manage Categories</a></li>
         <li><a href="#/widgets">Manage Widgets</a></li>
         <li><a href="#/tabs">Manage Tabs</a></li>
+        <li><a href="#/category-recommendations">Category Recommendations</a></li>
+
     </ul>
 </script>
 
