--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -20,17 +20,17 @@
             </a>
             <% } %>
             <ul class="nav navbar-nav">
-                <li class="dropdown  ">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                <li class="dropdown">
+                    <a class="cursor dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
                         <i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;
                         Info Links <span
                                 class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li>
+                        <!--<li>
                             <a href="/about">
                                 About CourseMapper
                             </a>
-                        </li>
+                        </li>-->
                         <li>
                             <a href="/recommend-category">
                                 Recommend Categories
