--- a/views/ui-widgets/html-sidebar/html-sidebar.ejs
+++ b/views/ui-widgets/html-sidebar/html-sidebar.ejs
@@ -1,5 +1,5 @@
 <div ng-controller="HtmlSidebarController" ng-init="init(widget)">
-    <div class="box-body no-padding" ng-bind-html="widget.options.content | unsafe">
+    <div class="box-body no-padding html-sidebar-content" ng-bind-html="widget.options.content | unsafe">
     </div>
 </div>
 
