--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -19,6 +19,7 @@
                             <li><a href="#/categories">Categories</a></li>
                             <li><a href="#/widgets">Widgets</a></li>
                             <li><a href="#/tabs">Tabs</a></li>
+                            <li><a href="#/category-recommendations">Category Recommendations</a></li>
                         </ul>
                     </li>
                 </ul>
