hide extra main menu when not login , set title on recmend cat page

--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -21,7 +21,7 @@
             <% } %>
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a class="cursor dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                    <a class="cursor dropdown-toggle" data-toggle="dropdown" aria-expanded="true" ng-show="user" ng-cloak>
                         <i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;
                         Info Links <span
                                 class="caret"></span></a>
