--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -89,19 +89,47 @@ input#searchInput{
   padding-bottom: 10px;
 }
 
+.CreatedAnnoZones-header{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
+  margin-bottom: 0px;
+}
+
+.createdAnnoZoneButton{
+    font-size: 9pt;
+    font-weight: bold;
+    color: #fff;
+    padding: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 2px;
+  }
+.createdAnnoZoneButton:hover{
+    font-size: 9pt;
+    font-weight: bold;
+    color: #fff;
+    
+
+  }
+
 .annoZonesNote{
   font-size: 9pt;
   font-weight: bold;
-  color: #333;
+  color: #7e7e7e;
   text-align: left;
   float:left;
 }
+
 
 .filter-header{
   font-size: 9pt;
   font-weight: bold;
   color: #545454;
 }
+
+
+
 .filter-tag{
   font-size: 9pt;
   font-weight: bold;
