--- a/views/course-analytics/preview-statistics.ejs
+++ b/views/course-analytics/preview-statistics.ejs
@@ -1,13 +1,44 @@
-<div class="box-body no-padding" ng-controller="PreviewStatsController">
-
-            <i class="ionicons ion-ios-people"></i> <b>{{totalUser}}</b> user enrolled
-
-            <i class="ionicons ion-ios-circle-filled"></i> <b>  {{treeNodes.length}}</b> <span>{{treeNodes.length==1 ? 'subtopic': 'subtopics'}}</span>
-
-            <i class="fa fa-file-video-o"></i> <b> <span>{{totalVideo}}</span> </b>  {{totalVideo <= 1 ? 'video': 'videos'}}
-
-            <i class="fa fa-file-pdf-o"></i> <b>  {{totalPdf}}</b> PDF {{totalPdf <= 1 ? 'file': 'files'}}
-
-            <i class="fa fa-comments"></i> <b>  {{totalDiscussion}}</b> <span>{{totalDiscussion <= 1 ? 'discussion': 'discussions'}}</span>
-
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-widget widget-user" ng-controller="PreviewStatsController">
+            <div class="widget-user-header bg-aqua-active" style="padding: 20px; height: 130px;">
+                <h3 class="widget-user-username">{{creator.createdBy.displayName}}</h3>
+                <h5 class="widget-user-desc">Course Creator</h5>
+            </div>
+            <div class="widget-user-image" style="position:absolute; top: 20px; right: 5%; ">
+                <img class="img-circle center-block" src="{{creator.createdBy.image}}" alt="User Image" ng-show="creator.createdBy.image" ng-cloak style="width: 90px; height: auto"/>
+            </div>
+            <div class="box-footer bg-green">
+                <div class="row">
+                    <div class="col-sm-4 border-right">
+                        <div class="description-block">
+                            <h5 class="description-header" style="font-size: 25px;"><i class="ionicons ion-ios-people"></i></h5>
+                            <span class="description-text"><b>{{totalUser}}</b> {{totalUser <= 1 ? 'user': 'users'}}</span><br/>
+                            <span class="description-text"><b>{{treeNodes.length}}</b> {{treeNodes.length <= 1 ? 'topic': 'topics'}}</span>
+                        </div>
+                        <!-- /.description-block -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-sm-4 border-right">
+                        <div class="description-block">
+                            <h5 class="description-header" style="font-size: 25px;"><i class="fa fa-file-pdf-o"></i> <i class="fa fa-file-video-o"></i></h5>
+                            <span class="description-text"><b>{{totalPdf}}</b> {{totalPdf <= 1 ? 'pdf': 'pdf'}}</span><br/>
+                            <span class="description-text"><b>{{totalVideo}}</b> {{totalVideo <= 1 ? 'video': 'videos'}}</span>
+                        </div>
+                        <!-- /.description-block -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-sm-4">
+                        <div class="description-block">
+                            <h5 class="description-header" style="font-size: 25px;"><i class="fa fa-comments"></i></h5>
+                            <span class="description-text"><b>{{totalDiscussion}}</b> {{totalDiscussion <= 1 ? 'discussion': 'discussions'}}</span>
+                        </div>
+                        <!-- /.description-block -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+        </div>
+    </div>
 </div>
