Widget - Fix bugs in course-listing and course-preview-stats widgets

--- a/views/course-analytics/preview-statistics.ejs
+++ b/views/course-analytics/preview-statistics.ejs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-widget widget-user" ng-controller="PreviewStatsController">
-            <div class="widget-user-header bg-aqua-active" style="padding: 20px; height: 130px;">
+            <div class="widget-user-header bg-aqua-active" style="padding: 20px 110px 20px 20px; height: 130px;">
                 <h3 class="widget-user-username">{{creator.createdBy.displayName}}</h3>
                 <h5 class="widget-user-desc">Course Creator</h5>
             </div>
